# pyMAP

./: README.md  pyproject.toml  setup.py
.github/workflows/: tests.yml
pymap/: __init__.py  pymap.py
